correcion-img: correcion de rutas v3

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -37,7 +37,7 @@ form {
 }
 
 body {
-    background-image: url("assets/images/bg.png");
+    background-image: url("../../assets/images/bg.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
