--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -93,6 +93,17 @@ a img {
     color: #979a9b;
 }
 
+/* Configuramos el texto que seleccionamos */
+::-moz-selection {
+    background-color: var(--text-tertiary);
+    color: var(--text-primary);
+  }
+  ::selection {
+    background-color: var(--text-tertiary);
+    color: var(--text-primary);
+  }
+  
+
 body,
 input,
 textarea,
@@ -134,6 +145,13 @@ button{
 table{
     width: 100%;
     text-align: center;
+    backdrop-filter: blur(8px);
+    background-color: rgba(255, 255, 255, 0.255);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 table caption{
     color: var(--f-primary);
@@ -144,7 +162,7 @@ table caption{
     font-size: 1rem;
 }
 table td{
-    border-bottom: 1px solid #6e6e6e;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.169);
     color: var(--text-primary);
     min-width: 50px;
     padding: 1rem 0;
@@ -154,7 +172,7 @@ table td a{
     font-weight: 600;
 }
 table td a:hover{
-    color: var(--f-secondary);
+    color: var(--text-secondary);
     font-weight: 600;
 }
 
@@ -178,7 +196,7 @@ table td a:hover{
     .nav-primary {
         display: flex;
         flex-flow: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
         min-height: 3rem;
@@ -186,10 +204,14 @@ table td a:hover{
 
     .nav-primary nav ul li a{
         padding: 0 1rem;
+        font-size: .8rem;
     }
-    .social,
+    .social{
+    }
     .nav-social {
         font-size: .8rem;
+        padding: 0 0 0 3rem;
+        font-size: .4rem;
     }
 
     .nav-social ul {
@@ -201,7 +223,9 @@ table td a:hover{
         margin: 0 1rem;
     }
 
-    .nav-social ul li a {}
+    .nav-social ul li a {
+        color: var(--f-secondary);
+    }
     
     nav ul {
         display: flex;
@@ -211,8 +235,8 @@ table td a:hover{
 
     .nav-secondary {
         display: flex;
+        justify-content: space-between;
         width: 100%;
-        align-items: end;
     }
     .auth{
         display: flex;
@@ -350,7 +374,8 @@ table td a:hover{
     }
     .sidebar{
         width: 30%;
-        min-height: 25rem;        
+        min-height: 25rem;   
+        max-width: 25rem;     
         backdrop-filter: blur(8px);
         background-color: rgba(255, 255, 255, 0.255);
         border-radius: 5px;
@@ -566,7 +591,7 @@ footer {
     flex-flow: column;
     width: 100%;
     min-height: 3rem;
-    
+    padding: 1rem 0;
 }
 .card-top::after{
     display: block;
@@ -574,6 +599,7 @@ footer {
     width: 80%;
     border-bottom: 1px solid var(--bg-line);
     margin: 0 auto;    
+    padding: 1rem;
 }
     h1{
         color: var(--text-primary);
@@ -589,11 +615,40 @@ footer {
     letter-spacing: .1rem;
     text-transform: uppercase;
 }
+.card-top h3{
+    color: var(--text-primary);
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+}
 
 .card-top h2 a{
     color: var(--f-primary);
 }
 .card-top h2 a:hover{
+    color: var(--text-primary);
+}
+
+
+.card-top h3{
+    color: var(--text-primary);
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+}
+
+.card-top h4 {
+    text-align: center;
+    text-transform: capitalize;
+    font-family: var(--font-2);
+    color: var(--text-primary);
+    font-size: 3rem;
+}
+
+.card-top  a{
+    color: var(--f-primary);
+}
+.card-top  a:hover{
     color: var(--text-primary);
 }
 
@@ -687,12 +742,29 @@ footer {
     background-color: var(--bg-primary);
     opacity: 50%;
 }
+.btn-secondary{
+    border: 2px solid var(--f-secondary);
+    transition: .3s ease;
+    -webkit-transition: .3s ease;
+    -moz-transition: .3s ease;
+    -ms-transition: .3s ease;
+    -o-transition: .3s ease;
+    color: var(--f-secondary);
+}
+.btn-secondary:hover{
+    border: 2px solid var(--bg-tertiary);
+    color: var(--text-primary);
+    opacity: 90%;
+}
 
 
 .mt-20 {
     margin-top: 20rem;
 }
 
+.m-2 {
+    margin: 2rem 0;
+}
 .m-5 {
     margin: 5rem 0;
 }
@@ -710,4 +782,9 @@ footer {
 }
 .w-2{
     width: 20%;
+}
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
