--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -123,6 +123,55 @@ option {
   outline: none;
 }
 
+h1,h2,h3{
+  color: var(--f-primary);
+
+}
+
+p{
+  font-size: .9rem;
+  font-family: var(--font-4);
+  color: var(--f-primary);
+}
+
+h1 {
+  color: var(--text-primary);
+  text-align: center;
+  font-family: var(--font-2);
+  width: 100%;
+  padding: 3rem 0;
+  font-size: 2.5rem;
+}
+
+h2{
+  font-family: var(--font-2);
+  font-size: 1rem;
+  padding: .5rem 1rem;
+}
+
+h3{
+  color: var(--text-primary);
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+h4{
+  text-align: center;
+  text-transform: capitalize;
+  font-family: var(--font-2);
+  color: var(--text-primary);
+  font-size: 3rem;
+}
+
+h5{
+  font-family: var(--font-4);
+  color: var(--text-primary);
+  font-size: 1rem;
+  border-bottom: var(--f-tertiary) 1px solid;
+  text-transform: uppercase;
+}
+
+
 button {
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -589,7 +638,6 @@ header {
 .content {
   border-radius: 5px;
   height: auto;
-  margin: 0 1rem 0 0;
   border-radius: 2px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -689,26 +737,14 @@ footer {
   margin: 0 auto;
   padding: 1rem;
 }
-h1 {
-  color: var(--text-primary);
-  text-align: center;
-  font-family: var(--font-2);
-  width: 100%;
-  padding: 3rem 0;
-  font-size: 2.5rem;
-}
-.card-top h2 {
+
+/* .card-top h2 {
   color: var(--text-primary);
   font-size: 2.5rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
-}
-.card-top h3 {
-  color: var(--text-primary);
-  font-size: 1rem;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
-}
+} */
+
 
 .card-top h2 a {
   color: var(--f-primary);
@@ -724,13 +760,7 @@ h1 {
   text-transform: uppercase;
 }
 
-.card-top h4 {
-  text-align: center;
-  text-transform: capitalize;
-  font-family: var(--font-2);
-  color: var(--text-primary);
-  font-size: 3rem;
-}
+
 
 .card-top a {
   color: var(--f-primary);
@@ -794,8 +824,11 @@ h1 {
 }
 .card-text p {
   overflow: hidden;
-  white-space: nowrap;
+  white-space: wrap;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .card-detail .card-btn {
@@ -848,6 +881,15 @@ h1 {
 .mt-20 {
   margin-top: 20rem;
 }
+.mt-10 {
+  margin-top: 10rem;
+}
+.mt-5 {
+  margin-top: 5rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
 
 .m-2 {
   margin: 2rem 0;
@@ -870,10 +912,70 @@ h1 {
 .w-2 {
   width: 20%;
 }
+
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.p-3 {
+  padding: 3rem;
+}
+.p-4 {
+  padding: 4rem;
+}
+.p-5 {
+  padding: 5rem;
+}
+
+.pr-1 {
+  padding-right: 1rem;
+}
+.pr-2 {
+  padding-right: 2rem;
+}
+.pr-3 {
+  padding-right: 3rem;
+}
+.pr-4 {
+  padding-right: 4rem;
+}
+.pr-5 {
+  padding-right: 5rem;
+}
+
+.mr-1 {
+  margin-right: 1rem;
+}
+.mr-2 {
+  margin-right: 2rem;
+}
+.mr-3 {
+  margin-right: 3rem;
+}
+.mr-4 {
+  margin-right: 4rem;
+}
+.mr-5 {
+  margin-right: 5rem;
+}
+
+
 .flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.flex-row {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.flex-column {
+  display: flex;
+  flex-flow: column;
 }
 
 .blur-1 {
@@ -916,7 +1018,66 @@ h1 {
 .bg-color-white {
   background-color: rgba(255, 255, 255, 0.878);
 }
+.bg-color-black {
+  background-color: rgba(0, 0, 0, 0.878);
+}
 
+.br-1 {
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
+}
+.br-2 {
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+}
+.br-3 {
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+.br-4 {
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+.br-5 {
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.border-l-1{
+    border-left: var(--f-secondary) 1px solid;
+
+}
+.border-l-2{
+    border-left: var(--f-secondary) 2px solid;
+
+}
+.border-l-3{
+    border-left: var(--f-secondary) 3px solid;
+
+}
+.border-l-4{
+    border-left: var(--f-secondary) 4px solid;
+
+}
+.border-l-5{
+    border-left: var(--f-secondary) 5px solid;
+
+}
 
 /* Profile */
 
@@ -994,7 +1155,6 @@ h1 {
   color: var(--f-primary);
 }
 .profile .profile-bottom{
-  min-height: 50rem;
   display: flex;
   flex-flow: column;
 }
