creacion-responsive: avance diseño profile v2 mejoras responsive v3

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -720,8 +720,20 @@ footer {
   flex-flow: column;
   width: 100%;
   padding: 0.5rem;
+  transition: transform 0.5s ease;
+  -webkit-transition: transform 0.5s ease;
+  -moz-transition: transform 0.5s ease;
+  -ms-transition: transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
 }
 
+.card:hover{
+  transform: scale(1.02);
+  -webkit-transform: scale(1.02);
+  -moz-transform: scale(1.02);
+  -ms-transform: scale(1.02);
+  -o-transform: scale(1.02);
+}
 .card .card-top {
   display: flex;
   flex-flow: column;
