instalacion de slider en home y adaptacion de navbar

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Background Color */
-  --bg-1: #313131;
+  --bg-1: #161616;
   --bg-2: #585858;
   --bg-3: #ffffff;
   --bg-4: #006eff;
@@ -16,7 +16,7 @@
   --color-3: #000;
   --color-4: #c3c3c3;
   --color-5: #ffd400;
-  --color-6: #fffb18;
+  --color-6: #8b55e9;
   --color-7: #d5ceff;
 
   /* Font  */
@@ -204,6 +204,199 @@ button {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+
+/* CSS */
+.button-29 {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.button-29:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.button-29:hover {
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-29:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+
+.button-86 {
+  all: unset;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  background: transparent;
+  border: none;
+  position: relative;
+  color: #f0f0f0;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-86::after,
+.button-86::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
+}
+
+.button-86::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: var(--color-2);
+  border-radius: 10px;
+}
+
+.button-86::after {
+  transform: translate(10px, 10px);
+  width: 35px;
+  height: 35px;
+  background: #ffffff15;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.button-86:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.button-86:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.button-86:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
+
+
+
+/* CSS */
+.button-47 {
+  align-items: center;
+  background: #FFFFFF;
+  border: 0 solid #E2E8F0;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-sizing: border-box;
+  color: #1A202C;
+  display: inline-flex;
+  font-family: Inter, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  height: 56px;
+  justify-content: center;
+  line-height: 24px;
+  overflow-wrap: break-word;
+  padding: 24px;
+  text-decoration: none;
+  width: auto;
+  border-radius: 8px;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+
+
+/* CSS */
+.button-28 {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid var(--color-7);
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: var(--color-7);
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-28:disabled {
+  pointer-events: none;
+}
+
+.button-28:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+  border: 2px solid transparent;
+}
+
+.button-28:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+
+
 table {
   width: 100%;
   text-align: center;
@@ -346,7 +539,7 @@ form .error {
     justify-content: space-around;
     align-items: center;
     min-height: 3rem;
-    padding: 1rem 1rem;
+    padding: 8rem 0 1rem 0;
   }
 
   .nav-primary .nav-p {
@@ -364,22 +557,21 @@ form .error {
     display: flex;
     flex-flow: row-reverse;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
-    border-bottom: 1px solid var(--bg-2);
-
+    min-height: 5rem;
   }
 
   .auth {
     display: flex;
     min-height: 4rem;
     align-items: center;
+    width: 400px;
   }
 
   .nav-secondary .auth ul {
     display: flex;
     flex-flow: row;
-    border-bottom: 1px solid var(--bg-2);
   }
 
   .nav-data {
@@ -398,7 +590,7 @@ form .error {
   .nav-horizontal {
     display: flex;
     flex-flow: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
   }
 
@@ -415,6 +607,7 @@ form .error {
   .logo img {
     display: block;
     width: 240px;
+    padding-top: 4rem;
   }
 
   .app {
@@ -507,7 +700,7 @@ form .error {
     display: flex;
     flex-flow: column;
     justify-content: center;
-    width: 100%;
+    width: 400px;
   }
 
   .nav-social {
@@ -576,6 +769,7 @@ form .error {
 
   .nav-primary .logo img {
     width: 40%;
+    
   }
 
   .app {
@@ -638,12 +832,10 @@ header {
 .nav-primary {
   display: flex;
   width: 100%;
-  background-color: var(--bg-1);
+  background-color: transparent;
 }
 
 .nav-secondary {
-  backdrop-filter: blur(7px);
-  background-color: rgba(0, 0, 0, 0.523);
   color: var(--color-6);
   /*border-bottom: var(--color-6) .1rem solid;
   */
@@ -687,16 +879,16 @@ header {
 
 .nav-primary .nav-p ul {
   justify-content: center;
-  border-bottom: 1px solid var(--color-6);
 }
 
 .nav-primary .nav-p ul li a {
   color: var(--color-1);
   width: 100%;
-  font-size: 1rem;
-  font-weight: 200;
+  font-size: 1.1rem;
+  font-weight: 400;
   border-bottom: 1px solid transparent;
   padding: 0 1rem;
+  font-family: var(--font-8);
 }
 
 .nav-primary .nav-p ul li a:hover {
@@ -705,6 +897,7 @@ header {
 
 .nav-primary .nav-p ul li a.active {
   color: var(--color-6);
+  font-weight: 400;
 }
 
 .nav-primary .logo {
@@ -722,9 +915,9 @@ header {
   text-transform: uppercase;
   font-size: 1.4rem;
   border-radius: 0.5em;
-  background-color: #f2f2f2;
+  background-color: #e2e2e2;
   padding: 0.2rem 1rem;
-  border: 1px solid #f2f2f2;
+  border: 1px solid #e7e7e7;
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
@@ -739,7 +932,7 @@ header {
 
 .nav-horizontal a:hover {
   box-shadow: -6px -6px 12px #e0e0e0, 6px 6px 12px #fff;
-  color: var(--color-5);
+  color: var(--color-6);
 }
 
 /* End Header */
@@ -771,9 +964,19 @@ footer {
 .slider {
   position: relative;
   width: 100%;
-  height: 210px;
+  height: 750px;
   overflow: hidden;
-
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  background-image: url("../../assets/images/bg-14.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: scroll;
+  image-rendering: optimizeQuality;
+  margin: 0;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .slide {
@@ -907,11 +1110,7 @@ footer {
   /* Alto fijo del contenedor */
   overflow: hidden;
   /* Oculta cualquier contenido que exceda los límites del contenedor */
-  transition: transform 0.5s ease;
-  -webkit-transition: transform 0.5s ease;
-  -moz-transition: transform 0.5s ease;
-  -ms-transition: transform 0.5s ease;
-  -o-transition: transform 0.5s ease;
+
 }
 
 .card-img-full-h {
@@ -938,17 +1137,6 @@ footer {
 
 
 
-.card-img:hover {
-  transform: scale(1.01);
-  -webkit-transform: scale(1.01);
-  -moz-transform: scale(1.01);
-  -ms-transform: scale(1.01);
-  -o-transform: scale(1.01);
-}
-
-.card-img:hover::after {
-  opacity: 1;
-}
 
 .card-img img {
   width: 100%;
@@ -1009,6 +1197,12 @@ footer {
 .card-detail .card-btn {
   display: flex;
   flex-flow: row-reverse;
+}
+
+.card-detail .card-btn-center {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
 }
 
 .btn {
@@ -1264,12 +1458,15 @@ footer {
 
 .bgg-color-1 {
 
-  background: #4776E6;
-  /* fallback for old browsers */
+  background: #4776e666;
   background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #8E54E9, #4776E6);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #8e54e98c, #4776e6d9);
+}
+
+.bgg-color-2{
+  background: #EB3349;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #F45C43, #EB3349);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #F45C43, #EB3349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
@@ -1410,6 +1607,24 @@ footer {
   border-bottom: var(--color-5) 5px solid;
 
 }
+
+
+.shadow-1 {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.shadow-2 {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.shadow-3 {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.shadow-4 {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.shadow-5 {
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+}
+.shadow-6 {}
 
 
 /* Profile */
