--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -168,7 +168,7 @@ h3 {
 h4 {
   text-align: center;
   text-transform: capitalize;
-  font-family: var(--font-7);
+  font-family: var(--font-5);
   color: var(--color-1);
   font-size: 3rem;
 }
@@ -281,13 +281,18 @@ button {
   right: 0;
   z-index: -99999;
   transition: all .4s;
+  -webkit-transition: all .4s;
+  -moz-transition: all .4s;
+  -ms-transition: all .4s;
+  -o-transition: all .4s;
 }
 
 .button-86::before {
   transform: translate(0%, 0%);
   width: 100%;
   height: 100%;
-  background: var(--color-2);
+  background: var(--color-6);
+
   border-radius: 10px;
 }
 
